Bug 494267: Cmd+A selects all text on page even when a plugin has keyboard focus. r=josh